# ppi-repository

./: .gitignore  README.md  pyproject.toml
src/ppi/: debug.py
src/ppi/data/: data.py  datamodule.py
src/ppi/models/: contrastive_ppi.py  step.py
src/ppi/models/baseline/: debug.py  siamese.py
src/ppi/models/contrastive_ppi/: contrastive_ppi.py  debug.py  utils.py
src/ppi/models/step/: debug.py  step.py
