[tool.poetry]
name = "ppi-repository"
version = "0.1.0"
description = "Deep Learning Models for Protein-Protein-Interaction (PPI) Prediction."
authors = ["Johannes Melsbach <github@melsbach.org>"]
readme = "README.md"
packages = [{include = "ppi_repository"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.31.0"
pandas = "^2.0.3"
numpy = "^1.25.2"
lightning = "^2.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
